[metadata]
name = rlboost
description = rlboost: outlier filtering using reinforcement learning and attention mechanisms
long_description = file: README.md
url = https://github.com/iiconocimiento/rlboost
author = Eloy Anguiano
keywords = outlier detection, reinforcement learning, attention, transformers
project_urls =
    Source= https://github.com/iiconocimiento/rlboost

[options]
packages =
    rlboost
install_requires =
    gym
    stable-baselines3<=1.1.0
    scikit-learn
    pytest
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0